--- a/latest/presentation.qmd
+++ b/latest/presentation.qmd
@@ -1,6 +1,6 @@
 ---
-title: "COMPUTO"
-subtitle: "Un journal académique en statistique et machine-learning promouvant la reproductibilité et les modes de publication alternatifs <br/><br/> <small><https://github.com/computorg/RR2023></small>"
+title: "Science Reproductible"
+subtitle: "Au-delà du CTRL-C CTRL-V <br/><br/> <small><https://marietienne.github.io/lebesgue_5mn></small>"
 footer: <https://computo.sfds.asso.fr>
 logo: img/logo_text_vertical.png
 date: last-modified
