--- a/latest/references.bib
+++ b/latest/references.bib
@@ -1,3 +1,24 @@
 @article{the_economist,
   year={2013},
   journal={The economist}}
+
+  @article{baker20161,
+  title={1,500 scientists lift the lid on reproducibility},
+  author={Baker, Monya},
+  journal={Nature},
+  volume={533},
+  number={7604},
+  year={2016}
+}
+
+
+@article{alston2021beginner,
+  title={A beginner’s guide to conducting reproducible research},
+  author={Alston, Jesse M and Rick, Jessica A},
+  journal={Bulletin of the Ecological Society of America},
+  volume={102},
+  number={2},
+  pages={1--14},
+  year={2021},
+  publisher={JSTOR}
+}
